# goit-web-hw-9

./: authors.json  load_to_mongodb.py  pyproject.toml  scrape_quotes.py
