[tool.poetry]
name = "goit-web-hw-9"
version = "0.1.0"
description = ""
authors = ["Alexander Ivanitskiy <negalapetrovna77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mymongo = "^0.1.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
